feat: oss-infra init
